加入配置文件

--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,9 @@
     "extra": {
         "think": {
             "services": [],
-            "config": []
+            "config": {
+                "topphpJwt": "topphpJwt.php"
+            }
         }
     },
     "config": {
