加入配置文件

--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
         "think": {
             "services": [],
             "config": {
-                "topphpJwt": "topphpJwt.php"
+                "topphpJwt": "config/topphpJwt.php"
             }
         }
     },
