--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         }
     ],
     "require": {
-        "php": "~7.2",
+        "php": ">=7.0",
+        "ext-openssl": "*",
+        "ext-mbstring": "*",
         "lcobucci/jwt": "^3.3",
         "ext-json": "*"
     },
